# f1tenth_rl

./: README.md  package.xml  setup.cfg  setup.py  setup_guide.md
config/: agent_params.yaml
f1tenth_rl/: environment.py  rl_agent_node.py
f1tenth_rl/models/: dqn.py  ppo.py
f1tenth_rl/utils/: farthest_point.py  rewards.py
launch/: rl_agent_launch.py
scripts/: eval_rl_agent.py  train_rl_agent.py
